add feature department
